manifests-k8s/angular-ms.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-ms
spec:
  ports:
  - nodePort: 31600
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: angular-ms
    tier: frontend
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-ms
      tier: frontend
  template:
    metadata:
      labels:
        app: angular-ms
        tier: frontend
    spec:
      containers:
      - image: 7rocky/angular-ms
        name: angular-ms
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            memory: 8Mi
