manifests-k8s/auth-ms.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-ms
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: auth-ms
    tier: backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-ms
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-ms
      tier: backend
  template:
    metadata:
      labels:
        app: auth-ms
        tier: backend
    spec:
      containers:
      - image: 7rocky/auth-ms
        name: auth-ms
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            memory: 64Mi
