manifests-k8s/mongo-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-dev
  name: mongo-dev
spec:
  ports:
  - nodePort: 32000
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo-dev
  type: NodePort

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-dev
  serviceName: mongo-dev
  template:
    metadata:
      labels:
        app: mongo-dev
    spec:
      containers:
      - env:
        - name: MONGO_INITDB_ROOT_USERNAME
          value: root
        - name: MONGO_INITDB_ROOT_PASSWORD
          value: secret
        image: mongo
        name: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: mongo-persistent-storage
      terminationGracePeriodSeconds: 10
      volumes:
      - name: mongo-persistent-storage
        persistentVolumeClaim:
          claimName: mongo-pv-claim
