manifests-k8s/mysql-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-dev
  name: mysql-dev
spec:
  ports:
  - nodePort: 31000
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql-dev
  type: NodePort

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-dev
  serviceName: mysql-dev
  template:
    metadata:
      labels:
        app: mysql-dev
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: MYSQL_ROOT_PASSWORD
              name: env-configmap
        image: mysql:8.0.19
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-persistent-storage
      terminationGracePeriodSeconds: 10
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
