manifests-k8s/orchestrator-ms.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-ms
spec:
  selector:
    app: orchestrator-ms
    tier: backend
  ports:
  - port: 80
    protocol: TCP
    targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-ms
spec:
  replicas: 3
  selector:
    matchLabels:
      app: orchestrator-ms
      tier: backend
  template:
    metadata:
      labels:
        app: orchestrator-ms
        tier: backend
    spec:
      containers:
      - env:
        - name: PORT
          value: "80"
        image: 7rocky/orchestrator-ms
        name: orchestrator-ms
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            memory: 16Mi
