manifests-k8s/stats-ms.yaml
apiVersion: v1
kind: Service
metadata:
  name: stats-ms
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: stats-ms
    tier: backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats-ms
      tier: backend
  template:
    metadata:
      labels:
        app: stats-ms
        tier: backend
    spec:
      containers:
      - env:
        - name: MONGO_HOSTNAME
          valueFrom:
            configMapKeyRef:
              key: MONGO_HOSTNAME
              name: env-configmap
        - name: MONGO_INITDB_ROOT_USERNAME
          valueFrom:
            configMapKeyRef:
              key: MONGO_INITDB_ROOT_USERNAME
              name: env-configmap
        - name: MONGO_INITDB_ROOT_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: MONGO_INITDB_ROOT_PASSWORD
              name: env-configmap
        - name: RABBITMQ_DEFAULT_USER
          valueFrom:
            configMapKeyRef:
              key: RABBITMQ_DEFAULT_USER
              name: env-configmap
        - name: RABBITMQ_DEFAULT_PASS
          valueFrom:
            configMapKeyRef:
              key: RABBITMQ_DEFAULT_PASS
              name: env-configmap
        - name: RABBITMQ_HOSTNAME
          valueFrom:
            configMapKeyRef:
              key: RABBITMQ_HOSTNAME
              name: env-configmap
        image: 7rocky/stats-ms
        name: stats-ms
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            memory: 16Mi
